--- a/public/app/pages/nomenclature/modal/newPattern.html
+++ b/public/app/pages/nomenclature/modal/newPattern.html
@@ -19,33 +19,34 @@
                 <div class="col-md-9">
                     <div class="btn btn-primary btn-file">
                         <i class="fa fa-plus"></i> Выберите файл
-                        <input type="file" class="pattern-input" id="patternInput" name="pattern_file">
+                        <input type="file" class="pattern-input" id="patternInput" name="pattern_file"
+                           onchange="angular.element(this).scope().change.add.pattern(this)">
                     </div>
                     <div class="btn-group">
-                        <button id="aspect-hA4" type="button" class="btn btn-primary" uib-tooltip="Альбомная ориентация" tooltip-append-to-body="true">
+                        <button ng-click="modalActions.aspect.hA4()" type="button" class="btn btn-primary" uib-tooltip="Альбомная ориентация" tooltip-append-to-body="true">
                             <i class="fa fa-arrows-h"></i> A4
                         </button>
-                        <button id="aspect-vA4" type="button" class="btn btn-primary" uib-tooltip="Книжная ориентация" tooltip-append-to-body="true">
+                        <button ng-click="modalActions.aspect.vA4()" type="button" class="btn btn-primary" uib-tooltip="Книжная ориентация" tooltip-append-to-body="true">
                             <i class="fa fa-arrows-v"></i> A4
                         </button>
-                        <button id="aspect-free" type="button" class="btn btn-primary" uib-tooltip="Свободное соотношение сторон" tooltip-append-to-body="true">
+                        <button ng-click="modalActions.aspect.free()" type="button" class="btn btn-primary" uib-tooltip="Свободное соотношение сторон" tooltip-append-to-body="true">
                             <i class="fa fa-crop"> Free</i>
                         </button>
                     </div>
                     <div class="btn-group">
-                        <button id="rotate-90" type="button" class="btn btn-primary" uib-tooltip="Повернуть на 90° против часовой" tooltip-append-to-body="true">
+                        <button ng-click="modalActions.rotate.m90()" type="button" class="btn btn-primary" uib-tooltip="Повернуть на 90° против часовой" tooltip-append-to-body="true">
                             <i class="fa fa-rotate-left"></i>
                         </button>
-                        <button id="rotate90" type="button" class="btn btn-primary" uib-tooltip="Повернуть на 90° по часовой" tooltip-append-to-body="true">
+                        <button ng-click="modalActions.rotate.p90()" type="button" class="btn btn-primary" uib-tooltip="Повернуть на 90° по часовой" tooltip-append-to-body="true">
                             <i class="fa fa-rotate-right"></i>
                         </button>
-                        <button id="mirror-h" type="button" class="btn btn-primary" uib-tooltip="Отразить по горизонтали" tooltip-append-to-body="true">
+                        <button ng-click="modalActions.rotate.mirror()" type="button" class="btn btn-primary" uib-tooltip="Отразить по горизонтали" tooltip-append-to-body="true">
                             <i class="fa fa-exchange"></i>
                         </button>
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <button type="button" class="btn btn-primary btn-block pattern-save">Готово</button>
+                    <button type="button" class="btn btn-primary btn-block" ng-click="modalActions.save()">Готово</button>
                 </div>
             </div>
         </div>
