--- a/public/app/pages/nomenclature/detail/detail.html
+++ b/public/app/pages/nomenclature/detail/detail.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-md-12 hidden-sm hidden-xs">
                         <h3>
-                            Деталь{{ (preview.detail.name && preview.detail.code ? " " + preview.detail.name +
+                            {{caption + (preview.detail.name && preview.detail.code ? " " + preview.detail.name +
                             " (" + preview.detail.code + ")" : (preview.detail.name) ? " " + preview.detail.name : "") }}
                             <a href="javascript:window.history.back(-1)" class="pull-right">Назад</a>
                         </h3>
@@ -25,13 +25,16 @@
                     <div class="row">
                         <div class="col-md-5" ng-show="edit" ng-class="edit ? 'animated fadeIn' : ''">
                             <div class="form-horizontal">
-                                <div class="form-group">
+                                <div class="form-group" ng-class="{ 'has-error': showErrors && (detail.name == null || detail.name == '') }">
                                     <label for="usm_detail_name" class="col-md-3 control-label">Имя детали</label>
                                     <div class="col-md-9">
                                         <input type="text" class="form-control" placeholder="Имя детали"
                                            id="usm_detail_name"
                                            name="usm_detail_name"
                                            ng-model="detail.name">
+                                    </div>
+                                    <div class="help-block col-md-offset-3 col-md-9" ng-show="showErrors && (detail.name == null || detail.name == '')">
+                                        <p>Поле обязательно к заполнению.</p>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -44,7 +47,7 @@
                                                bs3-typeahead bs3-source="groups" bs3-minLength="0" bs3-items="all">
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" ng-class="{ 'has-error': showErrors && (detail.code == null || detail.code == '') }">
                                     <label for="usm_detail_code" class="col-md-3 control-label">Шифр детали</label>
                                     <div class="col-md-9">
                                         <input type="text" class="form-control" placeholder="Шифр детали"
@@ -52,8 +55,11 @@
                                            name="usm_detail_code"
                                            ng-model="detail.code">
                                     </div>
+                                    <div class="help-block col-md-offset-3 col-md-9" ng-show="showErrors && (detail.code == null || detail.code == '')">
+                                        <p>Поле обязательно к заполнению.</p>
+                                    </div>
                                 </div>
-                                <div class="form-group btn-no-transform">
+                                <div class="form-group btn-no-transform" ng-class="{ 'has-error': showErrors && (selected.order.id == null || selected.order.id == '') }">
                                     <label class="col-md-3 control-label">Шифр заказа</label>
                                     <div class="col-md-4">
                                         <ui-select allow-clear on-select="ordersObj.client.change()" ng-model="selected.client">
@@ -79,15 +85,19 @@
                                     </div>
                                     <button class="btn btn-danger" ng-click="ordersObj.clear()"
                                         tooltip-placement="top-right" uib-tooltip="Очистить"><i class="fa fa-times"></i></button>
+                                    <div class="help-block col-md-offset-3 col-md-9" ng-show="showErrors && (selected.order.id == null || selected.order.id == '')">
+                                        <p>Поле обязательно к заполнению.</p>
+                                    </div>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" ng-class="{ 'has-error': showErrors && (calendar.dateCreation.date == null || calendar.dateCreation.date == '') }">
                                     <label for="usm_detail_dateCreation" class="col-md-3 control-label">Дата создания</label>
                                     <div class="col-md-9 btn-group btn-no-transform">
                                         <button type="button" class="btn btn-default col-md-9" ng-click="calendar.dateCreation.open()"
                                                 uib-datepicker-popup="dd MMMM yyyy г." ng-model="calendar.dateCreation.date"
                                                 is-open="calendar.dateCreation.opened" datepicker-options="calendar.dateCreation.options"
-                                                current-text="Сегодня" clear-text="Очистить" close-text="Закрыть"
-                                                ng-change="calendar.dateCreation.change()" show-button-bar="false">
+                                                datepicker-append-to-body="true" current-text="Сегодня" clear-text="Очистить" close-text="Закрыть"
+                                                ng-change="calendar.dateCreation.change()" show-button-bar="false"
+                                                style="{{(showErrors && (calendar.dateCreation.date == null || calendar.dateCreation.date == '')) ? 'border-color: #ed7878;' : ''}}">
                                             {{calendar.dateCreation.date ? (calendar.dateCreation.date | date:"dd MMMM yyyy г.") : '---'}}
                                         </button>
                                         <button type="button" class="btn btn-info col-md-1" ng-click="calendar.today(calendar.dateCreation)"
@@ -110,6 +120,9 @@
                                                 tooltip-animation="false" tooltip-is-open="calendar.dateCreation.tooltips.calendar" uib-tooltip="Календарь"></i>
                                         </button>
                                     </div>
+                                    <div class="help-block col-md-offset-3 col-md-9" ng-show="showErrors && (calendar.dateCreation.date == null || calendar.dateCreation.date == '')">
+                                        <p>Поле обязательно к заполнению.</p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="usm_detail_dateEnd" class="col-md-3 control-label">Дата исполнения</label>
@@ -118,7 +131,7 @@
                                                 uib-datepicker-popup="dd MMMM yyyy г." ng-model="calendar.dateEnd.date"
                                                 is-open="calendar.dateEnd.opened" datepicker-options="calendar.dateEnd.options"
                                                 current-text="Сегодня" clear-text="Очистить" close-text="Закрыть"
-                                                show-button-bar="false" datepicker-append-to-body>
+                                                show-button-bar="false" datepicker-append-to-body="true">
                                             {{calendar.dateEnd.date ? (calendar.dateEnd.date | date:"dd MMMM yyyy г.") : '---'}}
                                         </button>
                                         <button type="button" class="btn btn-info col-md-1" ng-click="calendar.today(calendar.dateEnd)"
@@ -345,14 +358,21 @@
                 </div>
             </div>
             <div class="panel-footer">
-                <button ng-show="edit" ng-click="switchEdit()" type="button" class="btn btn-danger pull-right"><i class="fa fa-ban"></i> Отменить</button>
-                <span class="pull-right">&nbsp;&nbsp;</span>
-                <button ng-show="edit || edited" ng-click="saveData()" type="button" class="btn btn-success pull-right"><i class="fa fa-floppy-o"></i> Сохранить</button>
+                <div class="actions">
+                    <div class="swap-container">
+                        <div ng-animate-swap="actions" class="cell swap-animation">
+                            <button ng-repeat="(key, item) in actions" type="button" class="btn" ng-class="item.class" ng-click="doAction(key)">
+                                <i ng-if="item.iconClass !== null" ng-class="item.iconClass"></i>
+                                {{item.text}}
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<ng-image-gallery
+<ng-image-gallery ng-show="showGallery"
     images="gallery.images"
     methods="gallery.methods"
     thumbnails="false"
