Добавил галлерею в nomenclature list * удалил представления из модулей, в которых их не должно быть * добавил сервисы (сервис уведомлений) * + мелкие правки в авторизации

--- a/public/app/pages/nomenclature/detailsList/detailsList.html
+++ b/public/app/pages/nomenclature/detailsList/detailsList.html
@@ -44,3 +44,9 @@
         </div>
     </div>
 </div>
+<ng-image-gallery ng-show="showGallery"
+    images="gallery.images"
+    methods="gallery.methods"
+    thumbnails="false"
+    bg-close="true"
+></ng-image-gallery>
