Доделал клиентскую часть редактирования заказа.

--- a/public/app/pages/nomenclature/detail/detail.html
+++ b/public/app/pages/nomenclature/detail/detail.html
@@ -67,6 +67,11 @@
                                             <ui-select-choices repeat="item in clients | filter: $select.search">
                                                 <span ng-bind-html="item.name | highlight: $select.search"></span>
                                             </ui-select-choices>
+                                            <ui-select-no-choice>
+                                                <div class="no-found">
+                                                    По этому запросу ничего не найдено.
+                                                </div>
+                                            </ui-select-no-choice>
                                         </ui-select>
                                     </div>
                                     <div class="col-md-4">
